--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^6.1.4",
     "@portabletext/react": "^3.1.0",
     "@sanity/block-content-to-react": "^3.0.0",
+    "@sanity/color-input": "^4.0.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.57.0",
     "@tailwindcss/line-clamp": "^0.4.4",
